--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+
 nav{
     width: 100%;
     position: fixed !important;
     top: 0;
+}
+
+body{
+    font-family: 'Kanit', sans-serif;
 }
 
 html{
@@ -29,8 +35,8 @@ html{
 .welcome{
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
-    width: 70%;
-    height: 15%;
+    width: 85%;
+    height: 20%;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -60,12 +66,12 @@ html{
 .headtx{
     color: white;
     /* background-color: tan; */
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .spgallery{
     height: 65vh;
-    width: 70vw;
+    width: 85%;
     margin-top: 2.5vh;
     /* background-color: #ad99ff8f; */
     border-radius: 20px;
@@ -85,8 +91,8 @@ html{
 }
 
 .about{
-    width: 70vw;
-    height: 27.5vh;
+    width: 85%;
+    height: 30vh;
     margin-top: 2.5vh;
     background-color: #ad99ff8f;
     text-align: center;
@@ -96,7 +102,7 @@ html{
 }
 
 .contactdiv{
-    width: 70vw;
+    width: 85%;
     height: 20vh;
     margin-top: 2.5vh;
     background-color: #ad99ff8f;
@@ -123,28 +129,30 @@ html{
     align-items: center;
     text-align: center;
     margin: 5%;
-    font-size: 20px
+    font-size: 18px
 }
 
 .gallery_sec1{
     scroll-snap-align: end;
     background-color: #382680;
-    height: calc(100vh - 56px);
+    height: calc(250vh - 56px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     margin-top: 56px;
+    justify-content: center;
 }
 
 .pro_gallery{
-    height: 65vh;
-    width: 70vw;
+    height: 215vh;
+    width: 85%;
     margin-top: 2.5vh;
     /* background-color: #ad99ff8f; */
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
 }
 
 .dropdown-item:hover{
@@ -153,5 +161,8 @@ html{
 }
 
 .pic2{
+    width: 85%;
     display: flex;
+    align-items: center;
+    /* background-color: #704DFF; */
 }
