--- a/style.css
+++ b/style.css
@@ -163,5 +163,5 @@ html{
     width: 85%;
     display: flex;
     align-items: center;
-    /* background-color: #704DFF; */
+    background-color: #704DFF;
 }
